2010-12-02 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Much improved algorithm for RangeSet.add_range().

2010-11-30 S. Thiell <stephane.thiell@cea.fr>

	* Worker/{Popen,Pdsh,Ssh}.py: Tell system to release associated resources
	with the child process on abort.

2010-11-30 S. Thiell <stephane.thiell@cea.fr>

	* Worker/Popen.py: Fix stderr pipe leak (trac ticket #121).
	* Worker/Ssh.py: Fix stderr pipe leak (trac ticket #121).
	* Worker/Pdsh.py: Fix stderr pipe leak (trac ticket #121).

	* tests/TaskRLimitsTest.py: New test.

2010-11-28 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Optimized NodeSet.__getitem__() (trac ticket #18).

2010-11-25 S. Thiell <stephane.thiell@cea.fr>

	* NodeSet.py: Slice-optimized version of RangeSet.__getitem__().

2010-11-03 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clush.py: Added --rcopy support (trac ticket #55).

	* Task.py: Added rcopy() method (part of trac ticket #55).

	* Worker/Pdsh.py: Support for reverse file copy (part of trac ticket #55).

	* Worker/Ssh.py: Support for reverse file copy (part of trac ticket #55).

2010-11-02 S. Thiell <stephane.thiell@cea.fr>

	* Worker/Ssh.py: Fix missing ev_start trigger when using task.copy() (trac
	ticket #125).

2010-11-01 S. Thiell <stephane.thiell@cea.fr>

	* CLI/OptionParser.py: Make -c/--copy an option that can take several
	source arguments.

	* CLI/Clush.py: Improve signal handling (trac ticket #65).

2010-10-25 S. Thiell <stephane.thiell@cea.fr>

	* CLI/Clush.py: Add launched-in-background checks before enabling user
	interaction (fix trac ticket #114).

2010-10-20 S. Thiell <stephane.thiell@cea.fr>

	* Task.py: Docstring improvements (trac tickets #120, #122).

2010-10-20 A. Degremont <aurelien.degremont@cea.fr>

	* NodeSet.py: Optimize NodeSetBase iteration.

2010-10-17 S. Thiell <stephane.thiell@cea.fr>

	* Engine/Factory.py: Re-enable EPoll engine (closes trac ticket #56).

	* Engine/EPoll.py: Cleanup and minor fix in the way event masks are
	modified.
